# W4DJ-RKB

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-artifacts.yml  release.yml
.superpowers/sdd/: progress.md  review-15d46b5..59f3d9d.diff  review-15d46b5..b1dabed.diff  review-4919e5d..4ed8976.diff  review-4919e5d..a9e7478.diff  review-9114da6..15d46b5.diff  review-9114da6..24e774a.diff  review-b1dabed..4919e5d.diff  review-b1dabed..4f17cad.diff  review-b1dabed..53076ee.diff  review-b1dabed..6d8f24a.diff  review-b1dabed..b652b83.diff  task-1-brief.md  task-1-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md
app/: package-lock.json  package.json
app/src/: app.test.ts  app.ts  styles.css
docs/superpowers/plans/: 2026-07-14-sync-preview-history-retry.md  2026-07-15-unified-source-picker-and-task-card.md
docs/superpowers/specs/: 2026-07-14-sync-preview-history-retry-design.md  2026-07-15-unified-source-picker-design.md
src/: config.rs  desktop.rs  gui.rs  history.rs  lib.rs  main.rs  metadata.rs  preferences.rs  preview.rs  sync.rs  task.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: desktop_controller.rs  desktop_flow.rs  gui_launch.rs  history.rs  preferences_roundtrip.rs  preview.rs  sync_policy.rs  task_state.rs
